<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sync">Sync</string>
    <string name="settings">Settings</string>
    <string name="sortnote">Sort note</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="unlink">Unlink</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="new_">New</string>
    <string name="select">Select</string>
    <string name="set">Set</string>
    <string name="add">Add</string>
    <string name="not_now">Not now</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="remove_notebook_link">Remove link</string>
    <string name="browse">Browse</string>
    <string name="dropbox">Dropbox</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="edit_note">Edit note</string>
    <string name="delete">Delete</string>
    <string name="delete_with_quoted_argument">Delete “%s”</string>
    <string name="name">Name</string>
    <string name="query">Query</string>
    <string name="done">Done</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_done_with_repeater">Reschedule %s</string>
    <string name="reminder_snooze">Snooze</string>
    <string name="close">Close</string>
    <string name="import_">Import</string>
    <string name="export">Export</string>
    <string name="overwrite">Overwrite</string>
    <string name="imported">Imported</string>
    <string name="created">Created</string>
    <string name="states">States</string>
    <string name="note">Note</string>
    <string name="notes">Notes</string>
    <string name="property">Property</string>
    <string name="import_as">Import as…</string>
    <string name="new_notebook">New notebook</string>
    <string name="new_folder">New folder</string>
    <string name="scheduled">Scheduled</string>
    <string name="agenda">Agenda</string>
    <string name="agenda_period">Agenda days</string>
    <string name="time">Time</string>
    <string name="repeater">Repeater</string>
    <string name="state">State</string>
    <string name="priority">Priority</string>
    <string name="nothing">Nothing</string>
    <string name="open">Open</string>
    <string name="focus">Focus</string>
    <string name="widget">Widget</string>
    <string name="history">History</string>
    <string name="event">Event</string>
    <plurals name="notes_cut">
        <item quantity="one">Note cut</item>
        <item quantity="other">Cut <b>%d</b> notes</item>
    </plurals>
    <string name="no_notes_cut">No notes cut</string>
    <plurals name="notes_copied">
        <item quantity="one">Note copied</item>
        <item quantity="other">Copied <b>%d</b> notes</item>
    </plurals>
    <plurals name="notes_pasted">
        <item quantity="one">Note pasted</item>
        <item quantity="other">Pasted <b>%d</b> notes</item>
    </plurals>
    <string name="no_notes_pasted">Nothing to paste</string>
    <string name="fragment_note_title_hint">Title</string>
    <string name="fragment_note_tags_hint" tools:ignore="typos">tag tag</string>
    <string name="import_org_file">Import Org file</string>
    <string name="message_dropbox_unlinked">Unlinked from Dropbox</string>
    <string name="message_dropbox_linked">Linked to Dropbox successfully</string>
    <string name="repos_preference_title">Repositories</string>
    <string name="repos_preference_summary">Location to synchronize your notebooks with</string>
    <string name="ssh_keygen_preference_title">SSH key generation</string>
    <string name="ssh_keygen_preference_summary">Generate key pair for Git repo sync</string>
    <string name="ssh_show_public_key_preference_title">View generated SSH public key</string>
    <string name="message_book_has_no_link">No link set</string>
    <string name="message_note_created">Note created</string>
    <string name="message_failed_creating_note">Failed to create note</string>
    <string name="message_failed_updating_note">Failed to update note</string>
    <string name="drawer_close">Close drawer</string>
    <string name="drawer_open">Open drawer</string>
    <string name="schedule">Schedule</string>
    <string name="refile">Refile</string>
    <string name="refile_to">Refile to</string>
    <string name="deadline">Deadline</string>
    <string name="closed">Closed</string>
    <string name="schedule_button_hint">Scheduled time</string>
    <string name="deadline_button_hint">Deadline time</string>
    <string name="closed_button_hint">Closed time</string>
    <string name="fragment_note_content_hint">Note content</string>
    <string name="books_context_menu_item_rename">Rename</string>
    <string name="books_context_menu_item_set_link">Set Link</string>
    <string name="books_context_menu_item_force_save">Force Save</string>
    <string name="books_context_menu_item_force_load">Force Load</string>
    <string name="move">Move</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="heads_action_menu_item_paste_above">Paste above</string>
    <string name="heads_action_menu_item_paste_under">Paste under</string>
    <string name="heads_action_menu_item_paste_below">Paste below</string>
    <string name="heads_moving_action_menu_item_promote">Promote</string>
    <string name="heads_moving_action_menu_item_down">Down</string>
    <string name="heads_moving_action_menu_item_up">Up</string>
    <string name="heads_moving_action_menu_item_demote">Demote</string>
    <string name="new_note">New note</string>
    <string name="quick_note">Quick note</string>
    <string name="tap_to_create_new_note">Tap to create a new note</string>
    <string name="options_menu_item_search">Search</string>
    <string name="no_user_repos_configured_pref_summary">None configured yet</string>
    <string name="repos_options_menu_new_repo">New Repository</string>
    <string name="book_name_already_exists">Notebook %s already exists</string>
    <string name="filter_name_already_exists">Search with the same name already exists</string>
    <string name="failed_creating_directory">Failed creating directory %s</string>
    <string name="version">What\'s new</string>
    <string name="search_hint">Search notes</string>
    <string name="clear_database">Clear database</string>
    <string name="clear_database_dialog_message">Clear local database?</string>
    <string name="clear_database_summary">Clear local database</string>
    <string name="clear_database_performed">Database cleared</string>
    <string name="getting_started_notebook_name">Getting Started with Orgzly</string>
    <string name="reload_getting_started">Import “Getting Started with Orgzly”</string>
    <string name="reload_getting_started_summary">Import the latest version of the notebook</string>
    <string name="notebook_imported">Notebook imported</string>
    <string name="book_does_not_exist_anymore">This notebook does not exist any more.</string>
    <string name="note_does_not_exist_anymore">This note does not exist any more.</string>
    <string name="search_does_not_exist_anymore">This search does not exist any more.</string>
    <string name="fragment_query_title">Search</string>
    <string name="repo_dropbox_button_not_linked">Link to Dropbox</string>
    <string name="repo_dropbox_button_linked">Unlink from Dropbox</string>
    <string name="fragment_settings_title">Settings</string>
    <string name="notes_update_needed_dialog_title">Preference affects notes</string>
    <string name="notes_update_needed_dialog_message">Update notes to reflect the changes?</string>
    <string name="updating_notes">Updating notes…</string>
    <string name="failure">Uh oh</string>
    <string name="no_notes_found_after_search">Your search did not match any notes</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_week">Next Week</string>
    <string name="tags">Tags</string>
    <string name="book_mtime">Notebook modification time</string>
    <string name="book_link">Notebook link</string>
    <string name="book_link_details">Notebook link details</string>
    <string name="book_last_action">Notebook last action</string>
    <string name="book_notes_count">Notes count</string>
    <string name="pref_title_notebooks">Notes &amp; Notebooks</string>
    <string name="notebook">Notebook</string>
    <string name="notebooks">Notebooks</string>
    <string name="searches">Searches</string>
    <string name="search">Search</string>
    <string name="new_search">New Search</string>
    <string name="multiple_repos">Multiple repositories exist</string>
    <string name="no_repos">No repositories configured</string>
    <string name="no_books">No notebooks found</string>
    <string name="book_encoding">Notebook\'s encoding</string>
    <string name="collecting_notebooks_in_progress">Collecting notebooks…</string>
    <string name="syncing_in_progress">Syncing…</string>
    <string name="syncing_book">Syncing %s…</string>
    <string name="sync_with_argument">Sync: %s</string>
    <string name="syncing_failed_title">Sync failed</string>
    <string name="canceled">Canceled</string>
    <string name="canceling">Canceling…</string>
    <string name="directory">Directory</string>
    <string name="fragment_repo_dropbox_directory_desc">Directory inside Dropbox (e.g. “/Documents/Orgzly”)</string>
    <string name="directory_uri">Directory URI</string>
    <string name="git_clone_progress">Cloning repository</string>
    <string name="git_verifying_settings">Ensuring repository settings will work.</string>
    <string name="git_url_hint">Remote URL (e.g. git@github.com:orgzly/orgzly-android.git)</string>
    <string name="git_directory_hint">Directory location (e.g. “/sdcard/orgzly”)</string>
    <string name="git_ssh_on_missing_key_dialog_text">No SSH key pair found. Do you wish to generate one?</string>
    <string name="git_ssh_on_missing_key_dialog_title">No SSH key found</string>
    <string name="git_https_username_hint">Username</string>
    <string name="git_https_password_hint">Password</string>
    <string name="git_author_hint">Author (e.g. John Doe)</string>
    <string name="git_email_hint">Email (e.g. john@email.com)</string>
    <string name="git_branch_hint">Branch (e.g. master)</string>
    <string name="git_auth_https_username_hint">Username</string>
    <string name="git_auth_https_password_hint">Password</string>
    <string name="git_generate_key_pair">Generate keypair</string>
    <string name="git_copy_public_key">Copy public key</string>
    <string name="git_auth_type_text">Authentication type</string>
    <string name="git_auth_type_ssh">SSH</string>
    <string name="git_auth_type_https">HTTPS</string>
    <string name="new_above">New above</string>
    <string name="new_under">New under</string>
    <string name="new_below">New below</string>
    <string name="cycle_visibility">Fold/Unfold All</string>
    <string name="look_and_feel">Look &amp; Feel</string>
    <string name="prefs_title_notifications">Notifications</string>
    <string name="app">App</string>
    <string name="prefs_title_reminders">Reminders</string>
    <string name="edit_book_preface">Edit preface</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="metadata">Metadata</string>
    <string name="show_all">Show all</string>
    <string name="always_show_set">Always show set</string>
    <string name="show_selected">Show selected</string>
    <string name="help">Help</string>
    <string name="clock">Clock</string>
    <string name="clock_in">Clock in</string>
    <string name="clock_out">Clock out</string>
    <string name="clock_cancel">Clock cancel</string>
</resources>