<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:title="@string/look_and_feel"
        android:key="prefs_screen_look_and_feel"/>

    <PreferenceScreen
        android:title="@string/pref_title_notebooks"
        android:key="prefs_screen_notebooks"/>

    <PreferenceScreen
        android:title="@string/prefs_title_notifications"
        android:key="prefs_screen_notifications"/>

    <PreferenceScreen
        android:title="@string/prefs_title_reminders"
        android:key="prefs_screen_reminders"/>

    <PreferenceScreen
        android:title="@string/sync"
        android:key="prefs_screen_sync"/>

    <PreferenceScreen
        android:title="@string/app"
        android:key="prefs_screen_app"/>

</PreferenceScreen>
