<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/close"
        android:icon="?attr/ic_cancel_24dp"
        app:showAsAction="always"
        android:title="@string/close" />

    <item
        android:id="@+id/done"
        android:icon="?attr/ic_send_24dp"
        app:showAsAction="always"
        android:title="@string/done" />

    <item
        android:id="@+id/metadata"
        android:icon="?attr/ic_unfold_more_24dp"
        app:showAsAction="never"
        android:title="@string/metadata">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/metadata_show_all"
                    android:title="@string/show_all" />
                <item
                    android:id="@+id/metadata_show_selected"
                    android:title="@string/show_selected" />
            </group>

            <item
                android:id="@+id/metadata_always_show_set"
                android:title="@string/always_show_set"
                android:checkable="true" />
        </menu>
    </item>

    <item
        android:id="@+id/delete"
        android:icon="?attr/ic_delete_24dp"
        app:showAsAction="never"
        android:title="@string/delete" />
</menu>