<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_action_bar_schedule"
        app:showAsAction="always"
        android:title="@string/schedule"
        android:icon="?attr/ic_today_24dp"/>

    <item
        android:id="@+id/bottom_action_bar_deadline"
        app:showAsAction="always"
        android:layout_height="wrap_content"
        android:title="@string/deadline"
        android:icon="?attr/ic_alarm_24dp" />

    <item
        android:id="@+id/bottom_action_bar_state"
        app:showAsAction="always"
        android:title="@string/state"
        android:icon="?attr/ic_flag_24dp"/>

    <item
        android:id="@+id/bottom_action_bar_done"
        app:showAsAction="always"
        android:title="@string/done"
        android:icon="?attr/ic_outline_check_circle_24dp"/>

    <item
        android:id="@+id/bottom_action_bar_new"
        android:icon="?attr/ic_add_24dp"
        app:showAsAction="always"
        android:title="@string/new_note">

        <menu>
            <item
                android:id="@+id/bottom_action_bar_new_above"
                app:showAsAction="always"
                android:title="@string/new_above"
                android:icon="?attr/oic_new_above_24dp"/>

            <item
                android:id="@+id/bottom_action_bar_new_under"
                app:showAsAction="always"
                android:title="@string/new_under"
                android:icon="?attr/oic_new_under_24dp"/>

            <item
                android:id="@+id/bottom_action_bar_new_below"
                app:showAsAction="always"
                android:title="@string/new_below"
                android:icon="?attr/oic_new_below_24dp"/>
        </menu>
    </item>
</menu>
