<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/focus"
        app:showAsAction="always"
        android:title="@string/open"
        android:icon="?attr/ic_center_focus_strong_24dp" />

    <item
        android:id="@+id/edit"
        app:showAsAction="always"
        android:title="@string/edit"
        android:icon="?attr/ic_edit_24dp">

        <menu>
            <item
                android:id="@+id/state"
                android:title="@string/state"
                android:icon="?attr/ic_flag_24dp" />

            <item
                android:id="@+id/schedule"
                android:title="@string/schedule"
                android:icon="?attr/ic_today_24dp" />

            <item
                android:id="@+id/deadline"
                android:layout_height="wrap_content"
                android:title="@string/deadline"
                android:icon="?attr/ic_alarm_24dp" />
        </menu>
    </item>

    <item
        android:id="@+id/toggle_state"
        app:showAsAction="always"
        android:title="@string/done"
        android:icon="?attr/ic_outline_check_circle_24dp" />

</menu>
